--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,4 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+
+  "ConnecionStrings": {
+    "DefaultConnection": "Server = localhost; Database = ADESS; Trusted_Connection = true; MultipleActiveResultSets = true; Integrated Security = true; Encrypt = False"
+  }
+
 }
