--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    
+  },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server = Localhost; Database = ADESS; Integrated Security = True; Encrypt = False "
     }
-  }
 }
