--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "cadenaSQL" : "Data Source:(Local); Initial Catalog=ADESS;Integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
